# pauli-based-computation

./: .gitignore  .pre-commit-config.yaml  README.md  _quarto.yml  environment-dev.yml  environment.yml  index.qmd  notebook.ipynb  pbc.py  pyproject.toml  viz.py
.github/workflows/: publish.yml
tests/: test_pbc.py
