[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "pauli-based-computation"
version = "0.1.0"
description = "An educational Jupyter notebook on Pauli-Based Computation (PBC)."
readme = "README.md"
requires-python = ">=3.11"

[tool.setuptools]
py-modules = ["pbc"]

[tool.black]
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]